# cspade-full

./: .gitignore  CMakeLists.txt  Makefile  README.md  calcdb.h  common.cc  common.h  zaki.txt
test-cases/: bb-tmi.Z10z10s0.01
